# cloud-torrent-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  scraper-config.json  test.rs  test_args.sh
.github/workflows/: build-release.yml  docker-push.yml  lint.yml
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/public/css/sections/: omni.css
frontend/public/template/: torrents.html
frontend/src/: main.rs
scripts/: cloud-torrent.service  doneCMD.sh  make_release.sh  quickinstall.sh
src/: main.rs
src/engine/: mod.rs  storage.rs  trackers.rs  types.rs  utils.rs
src/server/: handlers.rs  middleware.rs  mod.rs  rss.rs  scraper.rs  state.rs  types.rs
