[workspace]
members = [
    ".",
    "common",
    "frontend",
]

[package]
name = "cloud-torrent"
version = "1.0.1"
edition = "2024"

[dependencies]
serde_yaml = "0.9"
redb = "3"
regex = "1"
scraper = "0.25"
rust-embed = "8.6"
librqbit = "8"
zip = "8.1"
tokio-util = { version = "0.7", features = ["io"] }
cloud-torrent-common = { path = "./common" }
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"
url = "2.5"
bytes = "1.11"
mime_guess = "2.0"
tokio-stream = "0.1"
md5 = "0.8"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
sysinfo = "0.38"
urlencoding = "2.1"
base64 = "0.22.1"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
hyper-util = { version = "0.1.20", features = ["server-auto"] }

# For musl/static targets, force openssl to vendor its own copy so no system OpenSSL is needed.
# Use: RUSTFLAGS="-C target-feature=+crt-static" cargo build --target x86_64-unknown-linux-musl
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
