[package]
name = "cloud-torrent-frontend"
version = "1.0.4"
edition = "2024"

[dependencies]
yew = { version = "0.22", features = ["csr"] }
yew-hooks = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlTextAreaElement", "HtmlInputElement", "DataTransfer", "DataTransferItem", "DataTransferItemList", "File", "FileList", "WebSocket", "MessageEvent", "Window", "Storage", "Navigator", "Clipboard"] }
gloo-net = { version = "0.6", features = ["websocket", "http"] }
gloo-storage = "0.3"
gloo-file = "0.3"
gloo-utils = "0.2"
cloud-torrent-common = { path = "../common" }
chrono = { version = "0.4", features = ["wasmbind"] }
stylist = { version = "0.14", features = ["yew_integration"] }
log = "0.4"
wasm-logger = "0.2"
futures = "0.3"
